# esp-test

./: .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  esp32_aoo_test_main.c  ethernet_basic.c  ethernet_basic.h  main.c
